add popular filter and update swagger
